--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/index.css">
-    <link rel="images" href="./src/assets/Autor.png">
+    <link rel="images" href="./src/images/Autor.png">
+    <link rel="images" href="./src/images/Shano.jpg">
     <title>Meshano</title>
 </head>
 <body>
@@ -23,17 +24,17 @@
   </ul></div>
 </div>
   <div class="sec5"><h4 style="font-size:40px">My Projects</h4>
-    <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="C:\Users\Mesha\OneDrive\Documenten\Meshano\images\Autor.png"  alt="Workplace" usemap="#workmap"></a>
+    <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="./src/images/Autor.png"  alt="Workplace" usemap="#workmap"></a>
   </div>
 </body>
 <footer class="footer-port">
 <div class="full-footer">
   <div class="rij1-footport">Socials:</div>
   <div class="rij2-footport">
-    <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="C:\Users\Mesha\OneDrive\Documenten\Meshano\icons\linkedin.png"></a>
-    <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="C:\Users\Mesha\OneDrive\Documenten\Meshano\icons\gmail.png"></a>
-    <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="C:\Users\Mesha\OneDrive\Documenten\Meshano\icons\github.png"></a>
+    <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="./src/icons/linkedin.png"></a>
+    <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="./src/icons/gmail.png"></a>
+    <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="./src/icons/github.png"></a>
   </div>
 </div>
 </footer>
-</html>
+</html>\
