--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="secflex">
   <div class="sec2"><h2>About me</h2><p style="font-size: 20px;">I’m a Junior Software developer with a MBO degree for Software Development. What I like about software developing is 
     building a website from the ground up. I’m searching for a job where I can improve my skills and help customers with a good working website.</p></div>
-  <div class="sec3"><img class="portimg" src="C:\Users\Mesha\OneDrive\Documenten\Meshano\images\Shano.jpg" alt="Workplace" usemap="#workmap"></div>
+  <div class="sec3"><img class="portimg" src="./src/images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
   <div class="sec4"><h3>My experiences</h3><p style="font-size: 20px;">I got:</p><ul class="normalul">
     <li class="normalli" style="font-size: 20px;">4 years experience with stocking shelves in the stores Vomar, Albert Heijn en Jumbo</li>
     <li class="normalli" style="font-size: 20px;">A MBO niveau 4 Software Developer degree learning coding languages: HTML, CSS, Javascript, PHP, MySQL</li>
