--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./src/index.css">
     <link rel="images" href="./src/images/Autor.png">
     <link rel="images" href="./src/images/Shano.jpg">
+    <link rel="icons" href="./src/icons/linkedin.png">
+    <link rel="icons" href="./src/icons/gmail.png">
+    <link rel="icons" href="./src/icons/github.png">
     <title>Meshano</title>
 </head>
 <body>
