--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icons" href="./src/icons/linkedin.png">
     <link rel="icons" href="./src/icons/gmail.png">
     <link rel="icons" href="./src/icons/github.png">
-    <title>Meshano</title>
+    <title>Meshano</title>  
 </head>
 <body>
   <div class="fullsec">
@@ -18,7 +18,7 @@
     <div class="secflex">
     <div class="sec2"><h2>About me</h2><p style="font-size: 20px;">I am a Junior Software developer with a MBO degree for Software Development. What I like about software developing is 
       building a website from the ground up. I am searching for a job where I can improve my skills and help customers with a good working website.</p></div>
-    <div class="sec3"><img class="portimg" src="./images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
+    <div class="sec3"><img class="portimg" src="./src/images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
     <div class="sec4"><h3>My experiences</h3><p style="font-size: 20px;">I got:</p><ul class="normalul">
       <li class="normalli" style="font-size: 20px;">4 years experience with stocking shelves in the stores Vomar, Albert Heijn en Jumbo</li>
       <li class="normalli" style="font-size: 20px;">A MBO niveau 4 Software Developer degree learning coding languages: HTML, CSS, Javascript, PHP, MySQL</li>
@@ -27,16 +27,16 @@
     </ul></div>
   </div>
     <div class="sec5"><h4 style="font-size:40px">My Projects</h4>
-      <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="./images/Autor.png" class="autorimg" alt="Workplace" usemap="#workmap"></a>
+      <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="./src/images/Autor.png" class="autorimg" alt="Workplace" usemap="#workmap"></a>
     </div>
   </body>
   <footer class="footer-port">
   <div class="full-footer">
     <div class="rij1-footport">Socials:</div>
     <div class="rij2-footport">
-      <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="./icons/linkedin.png"></a>
-      <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="./icons/gmail.png"></a>
-      <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="./icons/github.png"></a>
+      <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="./src/icons/linkedin.png"></a>
+      <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="./src/icons/gmail.png"></a>
+      <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="./src/icons/github.png"></a>
     </div>
   </div>
   </footer>
