--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="sec4"><h3>My experiences</h3><p style="font-size: 20px;">I got:</p><ul class="normalul">
       <li class="normalli" style="font-size: 20px;">4 years experience with stocking shelves in the stores Vomar, Albert Heijn en Jumbo</li>
       <li class="normalli" style="font-size: 20px;">A MBO niveau 4 Software Developer degree learning coding languages: HTML, CSS, Javascript, PHP, MySQL</li>
-      <li class="normalli" style="font-size: 20px;">Half a year intership at Seolab learning Wordpress, Angular</li>
-      <li class="normalli" style="font-size: 20px;">Half a year intership at Forward Football learning Python</li>
+      <li class="normalli" style="font-size: 20px;">Intership at Seolab learning Wordpress, Angular</li>
+      <li class="normalli" style="font-size: 20px;">Intership at Forward Football learning Python</li>
     </ul></div>
   </div>
     <div class="sec5"><h4 style="font-size:40px">My Projects</h4>
