--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       about software developing is building a website from the ground up. I am searching for a job where I can improve my skills and help customers with a good 
       working website. Want to know <a href="about.html " type="button" style="font-size: 20px;">more?</a></p>
     </div>
-    <div class="sec3"><img class="portimg" src="./images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
+    <div class="sec3"><img class="portimg" src="./src/images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
     <div class="sec4"><h3>My experiences</h3><p style="font-size: 20px;">I got:</p><ul class="normalul">
       <li class="normalli" style="font-size: 20px;">Intership at Seolab learning Wordpress, Angular</li>
       <li class="normalli" style="font-size: 20px;">Intership at Forward Football learning Python</li>
@@ -29,16 +29,16 @@
     </ul></div>
   </div>
     <div class="sec5"><h4 style="font-size:40px">My Projects</h4>
-      <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="./images/Autor.png" class="autorimg" alt="Workplace" usemap="#workmap"></a>
+      <a href="https://autorijschoolhillegom.nl/" target="_blank"><img src="./src/images/Autor.png" class="autorimg" alt="Workplace" usemap="#workmap"></a>
     </div>
   </body>
   <footer class="footer-port">
   <div class="full-footer">
     <div class="rij1-footport">Socials:</div>
     <div class="rij2-footport">
-      <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="./icons/linkedin.png"></a>
-      <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="./icons/gmail.png"></a>
-      <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="./icons/github.png"></a>
+      <a class="infolinks" href="https://www.linkedin.com/in/meshanofransman/" target="_blank"><img class="linkedinicon" src="./src/icons/linkedin.png"></a>
+      <a class="infolinks" href="mailto:fmeshano@gmail.com" target="_blank"><img class="gmailicon" src="./src/icons/gmail.png"></a>
+      <a class="infolinks" href="https://github.com/Meshano" target="_blank"><img class="githubicon" src="./src/icons/github.png"></a>
     </div>
   </div>
   </footer>
