--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="secflex">
     <div class="sec2"><h2>About me</h2><p style="font-size: 20px;">I am a Junior Software developer with a MBO degree for Software Development. What I like 
       about software developing is building a website from the ground up. I am searching for a job where I can improve my skills and help customers with a good 
-      working website. Want to know <a href="./about.html" type="button" style="font-size: 20px;">more?</a></p>
+      working website. Want to know <a href="about.html" type="button" style="font-size: 20px;">more?</a></p>
     </div>
     <div class="sec3"><img class="portimg" src="./src/images/Shano.jpg" alt="Workplace" usemap="#workmap"></div>
     <div class="sec4"><h3>My experiences</h3><p style="font-size: 20px;">I got:</p><ul class="normalul">
